[taotao-cloud-project-1364] add[mapper]